fix: remove scrollbar if not needed

--- a/src/client/components/PopoverMenu/PopoverMenu.less
+++ b/src/client/components/PopoverMenu/PopoverMenu.less
@@ -1,6 +1,6 @@
 .PopoverMenu {
   max-height: 55vh;
-  overflow: scroll;
+  overflow-y: auto;
 
   & .iconfont,
   & .anticon {
